some new changes

--- a/singlepage/src/app/app.component.html
+++ b/singlepage/src/app/app.component.html
@@ -6,4 +6,13 @@
   <div id="rightbody">
     <app-rightbody></app-rightbody>
   </div>
+
+  <div class="blackscreen" *offer="5">
+  
+  </div>
+
+  <div class="offer" *offer="5">
+    {{offermessage}}
+  </div>
+
 </div>
