--- a/singlepage/src/app/routes/home/course/course.component.html
+++ b/singlepage/src/app/routes/home/course/course.component.html
@@ -1,4 +1,4 @@
-<div class="course">
+<div class="course" [highlight]="current.price" appHighlight>
   <div class="coursepic">
     <img src="../../../../assets/images/{{current.image}}" style="width: 100%;">
   </div>
